color-service.yml
apiVersion: v1
kind: Service
metadata:
  name: color-service
  namespace: color-app
spec:
  selector:
    app: my-app
  ports:
  - port: 80
    targetPort: 5000
  type: ClusterIP
