color-all.yml
apiVersion: v1
kind: Namespace
metadata:
  name: color-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: color-deployment
  namespace: color-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app
        image: minaamin/color-app:v1
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: color-service
  namespace: color-app
spec:
  selector:
    app: my-app
  ports:
  - port: 80
    targetPort: 5000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: color-ingress
  namespace: color-app
spec:
  ingressClassName: traefik
  rules:
  - host: colorapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: color-service
            port:
              number: 80
